--- a/protocols/request-response/Cargo.toml
+++ b/protocols/request-response/Cargo.toml
@@ -19,6 +19,8 @@ libp2p-swarm = { version = "0.42.1", path = "../../swarm" }
 libp2p-identity = { version = "0.1.0", path = "../../identity" }
 rand = "0.8"
 smallvec = "1.6.1"
+void = "1.0.2"
+log = "0.4.17"
 
 [dev-dependencies]
 async-std = { version = "1.6.2", features = ["attributes"] }
