--- a/transports/noise/Cargo.toml
+++ b/transports/noise/Cargo.toml
@@ -12,8 +12,10 @@ repository = "https://github.com/libp2p/rust-libp2p"
 bytes = "1"
 curve25519-dalek = "3.0.0"
 futures = "0.3.28"
-libp2p-core = { version = "0.39.0", path = "../../core" }
-libp2p-identity = { version = "0.1.2", path = "../../identity", features = ["ed25519"] }
+# libp2p-core = { version = "0.39.0", path = "../../core" }
+# libp2p-identity = { version = "0.1.2", path = "../../identity", features = ["ed25519"] }
+libp2p-core = { version = "0.39.0" }
+libp2p-identity = { version = "0.1.2", features = ["ed25519"] }
 log = "0.4"
 quick-protobuf = "0.8"
 once_cell = "1.17.1"
